Revert "ログイン後、ユーザー画面は出るが戻るボタンを押したらエラーになる"
This reverts commit f339012e227a9eb5024352498e4b932097d828d5.